# agent_nexus_j

./: .agent_config.json  .env.example  .gitignore  MANUAL.md  README.md  app.py  daily_work.md  docker-compose.yml  llm_cooperator.md  main.py  mock_mcp_server.py  project_description.md  pyproject.toml  start.bat  start.ps1  start.sh  tool_server.py
.streamlit/: config.toml
api/: alembic.ini
api/app/: init_db.py  main.py
api/app/api/routers/: chat.py  knowledge.py  llm_configs.py  mcp_servers.py  search_config.py  sessions.py  sessions_bak.py  system_prompts.py  tools.py
api/app/application/: agent_orchestrator.py  collaboration_orchestrator.py  rag_pipeline.py  routing_agent.py
api/app/core/: config.py  logger.py
api/app/domain/: schemas.py
api/app/infrastructure/database/: models.py  session.py
api/app/infrastructure/embedding/: local_service.py  service.py
api/app/infrastructure/files/: processor.py
api/app/infrastructure/llm/: adapters.py  provider.py
api/app/infrastructure/mcp/: connection.py  host.py  manager.py  protocol.py
api/app/infrastructure/tools/: base.py  dynamic_api.py  http_tool.py  registry.py
api/app/infrastructure/tools/builtins/: search_tool.py  system_time.py  terminal_executor.py
api/migrations/: env.py
api/migrations/versions/: 5d7851b60f1f_add_attachments_to_messages.py  9ab164830b1f_init_agent_session.py  a1b2c3d4e5f6_add_search_configs_table.py  c40c13daab74_add_collab_fields_to_agent_sessions.py  d0f4e6ebc4f0_add_rag_tables_and_embedding_fields.py  d6c027bbcd17_flex_embedding_dim_drop_ivfflat.py  e3f8a2b9c1d5_add_mcp_servers_table.py  ef93aa3880a5_add_message_model.py  f1a2b3c4d5e6_add_thinking_fields_to_llm_configs.py
docs/: MCP_DEVELOPER_GUIDE.md  MCP_ENGINEERING.md  PRD_v1.0.md  SUB_AGENT_INTEGRATION.md  multi_model_collaboration.md
docs/daily_logs/: docs_daily_logs_2026-05-09_work_log.md  docs_daily_logs_2026-05-10_work_log.md  docs_daily_logs_2026-05-12_work_log.md  plan.md
