[project]
name = "api"
version = "0.1.0"
description = "AgentNexus-J Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
    "uvicorn[standard]>=0.34.0",
]
[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.5",
]
