[project]
name = "agent-nexus-j"
version = "0.1.0"
description = "Enterprise multi-agent collaboration system"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    # Config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Logging
    "loguru>=0.7.0",
    # LLM
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Frontend
    "streamlit>=1.40.0",
    # Utils
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    # Multimodal file processing
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    # RAG / vector search
    "pgvector>=0.3.0",
    # Local embedding model (ONNX-based, no PyTorch required)
    "fastembed>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["api"]